--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -5,9 +5,15 @@ gem 'rails', '4.0.2'
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
+gem 'debugger'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
+# Use bootstrap css
+gem 'bootstrap-sass'
+group :development do
+  gem 'rails_layout'
+end
 
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
@@ -26,6 +32,8 @@ gem 'turbolinks'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
+
+gem 'devise'
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
